Dashboard UI Changes

--- a/ManningApp/Forms/Dashboard.resx
+++ b/ManningApp/Forms/Dashboard.resx
@@ -117,4 +117,117 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHRSURBVDhPnVTdLgNRGGzDPSJI3CNEEzxBH0Kj292tTbyDn2hQrvoQBAkRkUgkLlTcckHxAFwQ
+        LfEA6qaYOZ1trGz/TDLZc2a+b/bs191GmsFxnBHbth9xfUin08OS/49UKrWOwG8xK7k1oGEWJ3nHdV4S
+        tZzCyJxk3miBtbi6koKAMYeGihoPJNcNRNihtAp6PclVcE4QP1Vw77puv6xGJ+zBviC9jP2QLGNeyChi
+        8L2SDaCFBhKshVaih4y8EXGaUb8BYsKIv8AQ3+dacg3QZnzfvAVYbEgoJRKJDtXVAL1hYDwe74T+Rh+j
+        W+PjHqt4WzUBMER+aCABfZc+so64ueHGpIcA3hJ9cVFyANCz9BF4zc2dilfkB+B5XjcKt+BvYiRdkgPg
+        YZRR4OaUGzbJbxvo3WEGsk64WVX6C7xotaQtRNHrvzoZBk4okJxWUctAT+21AWO+eCbhybKsASO2AMy0
+        Dz3P7OXoJJvAGFiWcZtMJgdl1QVvjPor9oAf4JisKvDo0OwvFRQRbEEOmyln5oBmbmJKXhAKNScVX8E9
+        /nAk1vug+SpEniw8zAcK+PjnaqhL3CCP/4FxtTUHHnkKTRmQn+YlqfUyZjypsj+IRH4AertRThpigrwA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnSettings.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGESURBVDhPvVS7SsRAFM0Kio2dneJjbQWtfDSiaL9VzDuEgMHPSKm9/oQgVtqLj10Lf2AFyy0V
+        dVHQQs81d3ZvJotxFfbAgck9555MZjJjDBoV13VroMmsUS2T/gAEVD3P+5QMgmCW5f6BwA090Pf9dZbL
+        gYZdhJxQEGYyj+dzGUZE4Klt2zPwLOH5GLS4PQ/HccYhPqrGEn6IcSuO4zGO6QLCoTBJvoB1ZptrOWLW
+        exyTIYqiUQjPuhGsh2E4wTZ66STYELpiO0mSYbZlwJosQrgTpleETbHcAXzT0N6E7x5cYTkPEoTxissF
+        QLtWPmzeMpeLwMasKiPW5YLLBUC/VD7wx9nR9JXxt5/cxMsXWM5gmuYIhF472EBAlW2GZVlzqN1oHuJT
+        mqZDbMuA4r5mUnwHb5k07uU54Jgu6OeE0BIm+fPqlNoDHQqOyQNrsQ0e0bGi4wXzmWj8JvTO0SMvajvc
+        Xg40remBVGO5f9BVpQf+6/oCKgjZxKy2iDSmWiYNBIbxBbk/Yr2iXVdnAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnInfo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAEISURBVDhPvZRNCsIwFISrF1DPoXgBf8CVeoAu+gc9SjciiEfwWl5A0eoRXOlM+6JpiLZKcOAD
+        yZtM85IY76/KsqydJMkgDMMZ4W+OSbm5MLkXRdEWXMHdgGObNE27Yv8shE1lkhlkkgdBMJZpdsVxPIHx
+        Zkz8BL0jmV4VW0Dxopl19oKtdvZ9vyMxL6GwNoxP0Fqf2GoE27SSmFI8ORRy06jAVuyIrSacKqePrw8t
+        pq9gBxJXHMbCZlKgpTmx1RSsS1yxf0vToFO3h4SLkrj6lpsEsi5xhVoYPJomRYPAAzPKKBEG3V0bquZi
+        c/XvOrBfbMrpX08Jy3f3OCgh1N3zpcvZA/u7PO8B/TveDnbR888AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AABfkhiMXpIY7l6SGOZfkhjCX5IZfF6OHBtekxdvXpIYvl6SGOFekhjnXpIXxF6RGIBbkhscXZEYa16S
+        GLxekhjgXpIY516SGMZfkxeEXpEaHl6SGWdfkRm6XpIY31+SGOhekhjHXpIYiGCPGCBekhdiXpIYuF2T
+        GN1ekhjlX5MYp2CQGDVfkRlmXpEXbV6RGZBekhjfXpIY/l+SGOhekheYXZIZcF6RF21dkReOXpIY216S
+        GP5ekhjqXpIXml6RGXJekhhsX5IYjF6SGNhekhj+XpIY7V+RGZxdkhhzXZEYa16SGIpekhjUXpIY/l6S
+        F+9ekRieX5EYdF6SGGxekhhsXZMXIV2TGFVekRdPX5EZM12LFwtekxlcaZYPEV2RFyxelBdMXpEXT12T
+        GTRdixcLX5IZW16UGxNbkhgqXpQXTFyTGlBekhg2XYsXC1+SF1ldlxcWYJMaKF+SGEtekRlRXZAXN12i
+        FwtekxdXXI8UGVyQGiddkRhKXpEXT1yVFSRekhiTXpIY9V6SGPVekhj/XpIY7V6TGJJekxfkXpIY/16S
+        GPhekhj1XpIY/16SGPBekhiTXpIY4F6SGP9ekhj4XpIY9F6SGP9ekhjyX5IYlF2TGN1ekhj/XpIY+V6S
+        GPNekhj/XpIY9F6SGJZekhjYXpIY/16SGPpekhj0XpIY4AAAAAAAAAAAAAAAAF6OHBtdkRl7XpIY4F6T
+        GItfkhYjAP8AAQAAAABglRUYXZMYdl6SGN9ekRmQXpQbJgD/AAEAAAAAYZIYFV+TGXFdkxjdXpIYlmCT
+        GiiAgAACAAAAAF6UGxNekhhsXpIY216SGZtflBgrVaoAAwAAAABgnyAIAAAAAAAAAAAAAAAAAAAAAICA
+        AAIAAAAAY44cEl+RF3lekhi8X5IYwl2RGIlalBkfAAAAAGCPIBBekhh1X5EZul6SGMNfkhiMX5IWIwAA
+        AABiiRQNX5MZcV6SF7lekhfEXpEZkF6UGyYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAXZIYfl+SGMJekhfvXpIY/16SGP9ekhj/XpIY/16SGPdekRjBXpIY7V6SGP9ekhj/XpIY/16S
+        GP9ekhj5XpEYwV6SGOpekhj/XpIY/16SGP9ekhj/XpIY+16SGMNekxdvAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABfkxeEXpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/1+TF4QAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAF+TF4Rekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/X5MXhAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAX5MXhF6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9fkxeEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABekhi2XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16RGLMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXY8ZKV6SGP1ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/V6UGyYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABekhioXpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpMX5F6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekxfkXpIY/16SGP9ekhj/XpIY/16SGP9ekhj/X5IYnwAAAAAAAAAAAAAAAAAAAAAAAAAAYJEVJV6S
+        GPxekhj/XpIY/16SGP9ekhj/XpIY/1+SGM2AgAACXpEYs16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIZsICAAAJekxfPXpIY/16SGP9ekhj/XpIY/16SGP9ekhj5Xo4cGwAAAAAAAAAAAAAAAAAA
+        AABekhmbXpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XZIYoQAAAABdkheDXpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekRiCAAAAAF6SGKJekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhiKAAAAAAAA
+        AAAAAAAAQIAABF6SGPVekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhjbYJUVGF6SGMZekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SF8RcjxQZXZMY3V6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GOkA/wABAAAAAAAAAABVgCsGXpIY916SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY8AD/AAEAAAAAAAAAAAAAAABekRiAXpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP5dkhhzAAAAAAAAAAAAAAAAAAAAAAAAAABdkxdCXpMYoF6SF+9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGOxekhmbX5MaOwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVZUVDF+S
+        GF5ekRizXpIY9l6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY9V6RGLNfkhheXYsXCwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAX5EZM1mMGhRVlRUMX5IYXl6RGLNekhj1XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9ekhj1XpEYs1+SGF5dixcLWYwaFF+RGTMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABdkxeZXpIY9V6SGKJdkhdNZpkaCl2LFwtfkhheXpEYs16SGPVekhj/XpIY/16S
+        GPVekRizX5IYXmaZGgpmmRoKXZIXTV6SGKJekhj1XZMXmQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAF2TF5lekhj/XpIY/16SGP9ekhj1XpIYol2SF01mmRoKQIAABF6S
+        F0RekhdEQIAABGaZGgpdkhdNXpIYol6SGPVekhj/XpIY/16SGP9dkxeZAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXZMXmV6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GPtekhm7XZEYa12RGGtfkRm6XpIY+16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/12TF5kAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABekhh1XpIY/l6SGP9ekhj/XpIY/16S
+        GP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj+X5EYdAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABfkhjCXpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/1+SGMIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAF+SGMJekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/X5IYwgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAX5IYwl6SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16SGP9ekhj/XpIY/16S
+        GP9fkhjCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABdkheDXZMY3V2TGN1dkxjdXZMY3V2TGOhdkxjoXZMY3V2T
+        GN1dkxjdXZMY3V6RGIIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXZIXpF2S
+        F6QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABdkhekXZIXpAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAF2SF6RdkhekAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAADgwYMODBgwf/////AAAAAPnz58//Hjx/+AAAH/AAAA/wAAAP8AAAD/AA
+        AA/wAAAP4AAAB+AgBAfAIAQDwCAEA8AAAAPAAAAH8AAAD/4AAH//wAP//HgeP/wP8D/8AYA//gAAf//A
+        A///wAP//8AD///AA////n////5////+f/8=
+</value>
+  </data>
 </root>
